tests/baselines/reference/parserSkippedTokens17.errors.txt
==== tests/cases/compiler/parserSkippedTokens17.ts (5 errors) ====
    foo(a, \
           ~
!!! parserSkippedTokens17.ts(1,8): error TS1001: Unexpected character "\".
           ~
!!! parserSkippedTokens17.ts(1,8): error TS1008: Unexpected token; 'expression' expected.
            
!!! parserSkippedTokens17.ts(1,9): error TS1005: ')' expected.
    ~~~
!!! parserSkippedTokens17.ts(1,1): error TS2095: Cannot find name 'foo'.
        ~
!!! parserSkippedTokens17.ts(1,5): error TS2095: Cannot find name 'a'.